@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,7 @@
 
 package org.springframework.boot.autoconfigure.jms.activemq;
 
-import java.util.stream.Collectors;
-
-import javax.jms.ConnectionFactory;
-
+import jakarta.jms.ConnectionFactory;
 import org.apache.activemq.ActiveMQConnectionFactory;
 import org.apache.commons.pool2.PooledObject;
 import org.messaginghub.pooled.jms.JmsPoolConnectionFactory;
@@ -42,6 +39,7 @@ import org.springframework.jms.connection.CachingConnectionFactory;
  * @author Phillip Webb
  * @author Andy Wilkinson
  * @author Aurélien Leboulanger
+ * @author Eddú Meléndez
  */
 @Configuration(proxyBeanMethods = false)
 @ConditionalOnMissingBean(ConnectionFactory.class)
@@ -55,15 +53,19 @@ class ActiveMQConnectionFactoryConfiguration {
 		@Bean
 		@ConditionalOnProperty(prefix = "spring.jms.cache", name = "enabled", havingValue = "false")
 		ActiveMQConnectionFactory jmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
-			return createJmsConnectionFactory(properties, factoryCustomizers);
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+				ActiveMQConnectionDetails connectionDetails) {
+			return createJmsConnectionFactory(properties, factoryCustomizers, connectionDetails);
 		}
 
 		private static ActiveMQConnectionFactory createJmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
-			return new ActiveMQConnectionFactoryFactory(properties,
-					factoryCustomizers.orderedStream().collect(Collectors.toList()))
-							.createConnectionFactory(ActiveMQConnectionFactory.class);
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+				ActiveMQConnectionDetails connectionDetails) {
+			ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactory(connectionDetails.getUser(),
+					connectionDetails.getPassword(), connectionDetails.getBrokerUrl());
+			new ActiveMQConnectionFactoryConfigurer(properties, factoryCustomizers.orderedStream().toList())
+				.configure(connectionFactory);
+			return connectionFactory;
 		}
 
 		@Configuration(proxyBeanMethods = false)
@@ -73,12 +75,12 @@ class ActiveMQConnectionFactoryConfiguration {
 		static class CachingConnectionFactoryConfiguration {
 
 			@Bean
-			CachingConnectionFactory cachingJmsConnectionFactory(JmsProperties jmsProperties,
-					ActiveMQProperties properties,
-					ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
+			CachingConnectionFactory jmsConnectionFactory(JmsProperties jmsProperties, ActiveMQProperties properties,
+					ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+					ActiveMQConnectionDetails connectionDetails) {
 				JmsProperties.Cache cacheProperties = jmsProperties.getCache();
 				CachingConnectionFactory connectionFactory = new CachingConnectionFactory(
-						createJmsConnectionFactory(properties, factoryCustomizers));
+						createJmsConnectionFactory(properties, factoryCustomizers, connectionDetails));
 				connectionFactory.setCacheConsumers(cacheProperties.isConsumers());
 				connectionFactory.setCacheProducers(cacheProperties.isProducers());
 				connectionFactory.setSessionCacheSize(cacheProperties.getSessionCacheSize());
@@ -95,13 +97,15 @@ class ActiveMQConnectionFactoryConfiguration {
 
 		@Bean(destroyMethod = "stop")
 		@ConditionalOnProperty(prefix = "spring.activemq.pool", name = "enabled", havingValue = "true")
-		JmsPoolConnectionFactory pooledJmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
-			ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactoryFactory(properties,
-					factoryCustomizers.orderedStream().collect(Collectors.toList()))
-							.createConnectionFactory(ActiveMQConnectionFactory.class);
+		JmsPoolConnectionFactory jmsConnectionFactory(ActiveMQProperties properties,
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+				ActiveMQConnectionDetails connectionDetails) {
+			ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactory(connectionDetails.getUser(),
+					connectionDetails.getPassword(), connectionDetails.getBrokerUrl());
+			new ActiveMQConnectionFactoryConfigurer(properties, factoryCustomizers.orderedStream().toList())
+				.configure(connectionFactory);
 			return new JmsPoolConnectionFactoryFactory(properties.getPool())
-					.createPooledConnectionFactory(connectionFactory);
+				.createPooledConnectionFactory(connectionFactory);
 		}
 
 	}
