@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,15 +21,19 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Deque;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
 
 import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
+import org.springframework.boot.context.properties.bind.Bindable.BindRestriction;
 import org.springframework.boot.context.properties.source.ConfigurationProperty;
 import org.springframework.boot.context.properties.source.ConfigurationPropertyName;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySource;
@@ -53,19 +57,17 @@ import org.springframework.util.Assert;
 public class Binder {
 
 	private static final Set<Class<?>> NON_BEAN_CLASSES = Collections
-			.unmodifiableSet(new HashSet<>(Arrays.asList(Object.class, Class.class)));
+		.unmodifiableSet(new HashSet<>(Arrays.asList(Object.class, Class.class)));
 
 	private final Iterable<ConfigurationPropertySource> sources;
 
 	private final PlaceholdersResolver placeholdersResolver;
 
-	private final ConversionService conversionService;
-
-	private final Consumer<PropertyEditorRegistry> propertyEditorInitializer;
+	private final BindConverter bindConverter;
 
 	private final BindHandler defaultBindHandler;
 
-	private final List<DataObjectBinder> dataObjectBinders;
+	private final Map<BindMethod, List<DataObjectBinder>> dataObjectBinders;
 
 	/**
 	 * Create a new {@link Binder} instance for the specified sources. A
@@ -73,7 +75,7 @@ public class Binder {
 	 * @param sources the sources used for binding
 	 */
 	public Binder(ConfigurationPropertySource... sources) {
-		this(Arrays.asList(sources), null, null, null);
+		this((sources != null) ? Arrays.asList(sources) : null, null, null, null);
 	}
 
 	/**
@@ -158,19 +160,48 @@ public class Binder {
 	public Binder(Iterable<ConfigurationPropertySource> sources, PlaceholdersResolver placeholdersResolver,
 			ConversionService conversionService, Consumer<PropertyEditorRegistry> propertyEditorInitializer,
 			BindHandler defaultBindHandler, BindConstructorProvider constructorProvider) {
+		this(sources, placeholdersResolver,
+				(conversionService != null) ? Collections.singletonList(conversionService)
+						: (List<ConversionService>) null,
+				propertyEditorInitializer, defaultBindHandler, constructorProvider);
+	}
+
+	/**
+	 * Create a new {@link Binder} instance for the specified sources.
+	 * @param sources the sources used for binding
+	 * @param placeholdersResolver strategy to resolve any property placeholders
+	 * @param conversionServices the conversion services to convert values (or
+	 * {@code null} to use {@link ApplicationConversionService})
+	 * @param propertyEditorInitializer initializer used to configure the property editors
+	 * that can convert values (or {@code null} if no initialization is required). Often
+	 * used to call {@link ConfigurableListableBeanFactory#copyRegisteredEditorsTo}.
+	 * @param defaultBindHandler the default bind handler to use if none is specified when
+	 * binding
+	 * @param constructorProvider the constructor provider which provides the bind
+	 * constructor to use when binding
+	 * @since 2.5.0
+	 */
+	public Binder(Iterable<ConfigurationPropertySource> sources, PlaceholdersResolver placeholdersResolver,
+			List<ConversionService> conversionServices, Consumer<PropertyEditorRegistry> propertyEditorInitializer,
+			BindHandler defaultBindHandler, BindConstructorProvider constructorProvider) {
 		Assert.notNull(sources, "Sources must not be null");
+		for (ConfigurationPropertySource source : sources) {
+			Assert.notNull(source, "Sources must not contain null elements");
+		}
 		this.sources = sources;
 		this.placeholdersResolver = (placeholdersResolver != null) ? placeholdersResolver : PlaceholdersResolver.NONE;
-		this.conversionService = (conversionService != null) ? conversionService
-				: ApplicationConversionService.getSharedInstance();
-		this.propertyEditorInitializer = propertyEditorInitializer;
+		this.bindConverter = BindConverter.get(conversionServices, propertyEditorInitializer);
 		this.defaultBindHandler = (defaultBindHandler != null) ? defaultBindHandler : BindHandler.DEFAULT;
 		if (constructorProvider == null) {
 			constructorProvider = BindConstructorProvider.DEFAULT;
 		}
 		ValueObjectBinder valueObjectBinder = new ValueObjectBinder(constructorProvider);
 		JavaBeanBinder javaBeanBinder = JavaBeanBinder.INSTANCE;
-		this.dataObjectBinders = Collections.unmodifiableList(Arrays.asList(valueObjectBinder, javaBeanBinder));
+		Map<BindMethod, List<DataObjectBinder>> dataObjectBinders = new HashMap<>();
+		dataObjectBinders.put(BindMethod.VALUE_OBJECT, List.of(valueObjectBinder));
+		dataObjectBinders.put(BindMethod.JAVA_BEAN, List.of(javaBeanBinder));
+		dataObjectBinders.put(null, List.of(valueObjectBinder, javaBeanBinder));
+		this.dataObjectBinders = Collections.unmodifiableMap(dataObjectBinders);
 	}
 
 	/**
@@ -331,23 +362,20 @@ public class Binder {
 			result = context.getConverter().convert(result, target);
 		}
 		if (result == null && create) {
-			result = create(target, context);
+			result = fromDataObjectBinders(target.getBindMethod(),
+					(dataObjectBinder) -> dataObjectBinder.create(target, context));
 			result = handler.onCreate(name, target, context, result);
 			result = context.getConverter().convert(result, target);
-			Assert.state(result != null, () -> "Unable to create instance for " + target.getType());
+			if (result == null) {
+				IllegalStateException ex = new IllegalStateException(
+						"Unable to create instance for " + target.getType());
+				this.dataObjectBinders.get(target.getBindMethod())
+					.forEach((dataObjectBinder) -> dataObjectBinder.onUnableToCreateInstance(target, context, ex));
+				throw ex;
+			}
 		}
 		handler.onFinish(name, target, context, result);
 		return context.getConverter().convert(result, target);
-	}
-
-	private Object create(Bindable<?> target, Context context) {
-		for (DataObjectBinder dataObjectBinder : this.dataObjectBinders) {
-			Object instance = dataObjectBinder.create(target, context);
-			if (instance != null) {
-				return instance;
-			}
-		}
-		return null;
 	}
 
 	private <T> T handleBindError(ConfigurationPropertyName name, Bindable<T> target, BindHandler handler,
@@ -357,8 +385,8 @@ public class Binder {
 			return context.getConverter().convert(result, target);
 		}
 		catch (Exception ex) {
-			if (ex instanceof BindException) {
-				throw (BindException) ex;
+			if (ex instanceof BindException bindException) {
+				throw bindException;
 			}
 			throw new BindException(name, target, context.getConfigurationProperty(), ex);
 		}
@@ -366,8 +394,8 @@ public class Binder {
 
 	private <T> Object bindObject(ConfigurationPropertyName name, Bindable<T> target, BindHandler handler,
 			Context context, boolean allowRecursiveBinding) {
-		ConfigurationProperty property = findProperty(name, context);
-		if (property == null && containsNoDescendantOf(context.getSources(), name) && context.depth != 0) {
+		ConfigurationProperty property = findProperty(name, target, context);
+		if (property == null && context.depth != 0 && containsNoDescendantOf(context.getSources(), name)) {
 			return null;
 		}
 		AggregateBinder<?> aggregateBinder = getAggregateBinder(target, context);
@@ -414,8 +442,9 @@ public class Binder {
 		return context.withIncreasedDepth(() -> aggregateBinder.bind(name, target, elementBinder));
 	}
 
-	private ConfigurationProperty findProperty(ConfigurationPropertyName name, Context context) {
-		if (name.isEmpty()) {
+	private <T> ConfigurationProperty findProperty(ConfigurationPropertyName name, Bindable<T> target,
+			Context context) {
+		if (name.isEmpty() || target.hasBindRestriction(BindRestriction.NO_DIRECT_PROPERTY)) {
 			return null;
 		}
 		for (ConfigurationPropertySource source : context.getSources()) {
@@ -441,20 +470,23 @@ public class Binder {
 			return null;
 		}
 		Class<?> type = target.getType().resolve(Object.class);
+		BindMethod bindMethod = target.getBindMethod();
 		if (!allowRecursiveBinding && context.isBindingDataObject(type)) {
 			return null;
 		}
 		DataObjectPropertyBinder propertyBinder = (propertyName, propertyTarget) -> bind(name.append(propertyName),
 				propertyTarget, handler, context, false, false);
-		return context.withDataObject(type, () -> {
-			for (DataObjectBinder dataObjectBinder : this.dataObjectBinders) {
-				Object instance = dataObjectBinder.bind(name, target, context, propertyBinder);
-				if (instance != null) {
-					return instance;
-				}
-			}
-			return null;
-		});
+		return context.withDataObject(type, () -> fromDataObjectBinders(bindMethod,
+				(dataObjectBinder) -> dataObjectBinder.bind(name, target, context, propertyBinder)));
+	}
+
+	private Object fromDataObjectBinders(BindMethod bindMethod, Function<DataObjectBinder, Object> operation) {
+		return this.dataObjectBinders.get(bindMethod)
+			.stream()
+			.map(operation)
+			.filter(Objects::nonNull)
+			.findFirst()
+			.orElse(null);
 	}
 
 	private boolean isUnbindableBean(ConfigurationPropertyName name, Bindable<?> target, Context context) {
@@ -511,8 +543,6 @@ public class Binder {
 	 */
 	final class Context implements BindContext {
 
-		private final BindConverter converter;
-
 		private int depth;
 
 		private final List<ConfigurationPropertySource> source = Arrays.asList((ConfigurationPropertySource) null);
@@ -524,10 +554,6 @@ public class Binder {
 		private final Deque<Class<?>> constructorBindings = new ArrayDeque<>();
 
 		private ConfigurationProperty configurationProperty;
-
-		Context() {
-			this.converter = BindConverter.get(Binder.this.conversionService, Binder.this.propertyEditorInitializer);
-		}
 
 		private void increaseDepth() {
 			this.depth++;
@@ -600,7 +626,7 @@ public class Binder {
 		}
 
 		BindConverter getConverter() {
-			return this.converter;
+			return Binder.this.bindConverter;
 		}
 
 		@Override
