@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,8 @@
 
 package org.springframework.boot.context.properties.bind;
 
+import java.net.InetAddress;
+import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -23,15 +25,17 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
-import org.mockito.Answers;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
 
 import org.springframework.boot.context.properties.bind.BinderTests.ExampleEnum;
 import org.springframework.boot.context.properties.bind.BinderTests.JavaBean;
+import org.springframework.boot.context.properties.bind.MapBinderTests.CustomMapWithoutDefaultCtor.CustomMap;
 import org.springframework.boot.context.properties.source.ConfigurationPropertyName;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySource;
 import org.springframework.boot.context.properties.source.MapConfigurationPropertySource;
@@ -47,8 +51,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.entry;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.assertArg;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
 
@@ -75,7 +81,7 @@ class MapBinderTests {
 
 	private final List<ConfigurationPropertySource> sources = new ArrayList<>();
 
-	private Binder binder = new Binder(this.sources);
+	private final Binder binder = new Binder(this.sources);
 
 	@Test
 	void bindToMapShouldReturnPopulatedMap() {
@@ -128,7 +134,8 @@ class MapBinderTests {
 		source.put("faf.far.bin", "x");
 		this.sources.add(source);
 		Map<String, Map<String, Integer>> result = this.binder
-				.bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type)).get();
+			.bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type))
+			.get();
 		assertThat(result).hasSize(2);
 		assertThat(result.get("bar")).containsEntry("baz", 1).containsEntry("bin", 2);
 		assertThat(result.get("far")).containsEntry("baz", 3).containsEntry("bin", 4);
@@ -182,9 +189,9 @@ class MapBinderTests {
 		source.put("foo", "bar");
 		this.sources.add(source);
 		Map<String, Object> result = this.binder.bind("", Bindable.mapOf(String.class, Object.class)).get();
-		assertThat(result.get("commit")).isEqualTo(Collections.singletonMap("id", "abcdefg"));
-		assertThat(result.get("branch")).isEqualTo("master");
-		assertThat(result.get("foo")).isEqualTo("bar");
+		assertThat(result).containsEntry("commit", Collections.singletonMap("id", "abcdefg"));
+		assertThat(result).containsEntry("branch", "master");
+		assertThat(result).containsEntry("foo", "bar");
 	}
 
 	@Test
@@ -298,7 +305,7 @@ class MapBinderTests {
 		source.put("foo.ccc.ddd.eee", "bazboo");
 		this.sources.add(source);
 		Map<String, ExampleEnum> result = this.binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class))
-				.get();
+			.get();
 		assertThat(result).hasSize(3);
 		assertThat(result).containsEntry("aaa.bbb.ccc", ExampleEnum.FOO_BAR);
 		assertThat(result).containsEntry("bbb.ccc.ddd", ExampleEnum.BAR_BAZ);
@@ -311,15 +318,13 @@ class MapBinderTests {
 		TestPropertySourceUtils.addInlinedPropertiesToEnvironment(environment, "foo=boo");
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource("foo.aaa.bbb.ccc", "baz-${foo}");
 		this.sources.add(source);
-		this.binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment));
-		Map<String, ExampleEnum> result = this.binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class))
-				.get();
+		Binder binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment));
+		Map<String, ExampleEnum> result = binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class)).get();
 		assertThat(result).containsEntry("aaa.bbb.ccc", ExampleEnum.BAZ_BOO);
 	}
 
 	@Test
 	void bindToMapWithNoPropertiesShouldReturnUnbound() {
-		this.binder = new Binder(this.sources);
 		BindResult<Map<String, ExampleEnum>> result = this.binder.bind("foo",
 				Bindable.mapOf(String.class, ExampleEnum.class));
 		assertThat(result.isBound()).isFalse();
@@ -328,26 +333,25 @@ class MapBinderTests {
 	@Test
 	void bindToMapShouldTriggerOnSuccess() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "1", "line1"));
-		BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
+		BindHandler handler = mockBindHandler();
 		Bindable<Map<String, Integer>> target = STRING_INTEGER_MAP;
 		this.binder.bind("foo", target, handler);
 		InOrder ordered = inOrder(handler);
-		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)),
-				any(), eq(1));
+		ordered.verify(handler)
+			.onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)), any(), eq(1));
 		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
 	}
 
 	@Test
 	void bindToMapStringArrayShouldTriggerOnSuccess() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "a,b,c", "line1"));
-		BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
+		BindHandler handler = mockBindHandler();
 		Bindable<Map<String, String[]>> target = STRING_ARRAY_MAP;
 		this.binder.bind("foo", target, handler);
 		InOrder ordered = inOrder(handler);
-		ArgumentCaptor<String[]> array = ArgumentCaptor.forClass(String[].class);
-		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)),
-				any(), array.capture());
-		assertThat(array.getValue()).containsExactly("a", "b", "c");
+		ordered.verify(handler)
+			.onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)), any(),
+					assertArg((array) -> assertThat((String[]) array).containsExactly("a", "b", "c")));
 		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
 	}
 
@@ -361,7 +365,7 @@ class MapBinderTests {
 		source.put("foo.bar[2].value", "c");
 		this.sources.add(source);
 		Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-		List<String> values = map.get("bar").stream().map(JavaBean::getValue).collect(Collectors.toList());
+		List<String> values = map.get("bar").stream().map(JavaBean::getValue).toList();
 		assertThat(values).containsExactly("a", "b", "c");
 
 	}
@@ -426,7 +430,7 @@ class MapBinderTests {
 		mockSource.put("foo.bar.baz[2].value", "c");
 		this.sources.add(mockSource);
 		Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-		List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).collect(Collectors.toList());
+		List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).toList();
 		assertThat(values).containsExactly("a", "b", "c");
 	}
 
@@ -500,8 +504,8 @@ class MapBinderTests {
 		source.put("foo", "a,b");
 		this.sources.add(source);
 		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-		assertThat(map.get("a")).isNotNull();
-		assertThat(map.get("b")).isNotNull();
+		assertThat(map).containsKey("a");
+		assertThat(map).containsKey("b");
 	}
 
 	@Test
@@ -516,8 +520,8 @@ class MapBinderTests {
 		source.put("foo.b", "b");
 		this.sources.add(source);
 		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-		assertThat(map.get("a")).isEqualTo("a");
-		assertThat(map.get("b")).isEqualTo("b");
+		assertThat(map).containsEntry("a", "a");
+		assertThat(map).containsEntry("b", "b");
 	}
 
 	@Test
@@ -556,7 +560,8 @@ class MapBinderTests {
 		source.put("foo.items.a", "b");
 		this.sources.add(source);
 		ExampleCustomNoDefaultConstructorBean result = this.binder
-				.bind("foo", ExampleCustomNoDefaultConstructorBean.class).get();
+			.bind("foo", ExampleCustomNoDefaultConstructorBean.class)
+			.get();
 		assertThat(result.getItems()).containsOnly(entry("foo", "bar"), entry("a", "b"));
 	}
 
@@ -567,7 +572,8 @@ class MapBinderTests {
 		source.put("foo.items.a", "b");
 		this.sources.add(source);
 		ExampleCustomWithDefaultConstructorBean result = this.binder
-				.bind("foo", ExampleCustomWithDefaultConstructorBean.class).get();
+			.bind("foo", ExampleCustomWithDefaultConstructorBean.class)
+			.get();
 		assertThat(result.getItems()).containsExactly(entry("a", "b"));
 	}
 
@@ -578,7 +584,8 @@ class MapBinderTests {
 		source.put("foo.values.e", "f");
 		this.sources.add(source);
 		Map<String, String> result = this.binder
-				.bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b"))).get();
+			.bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b")))
+			.get();
 		assertThat(result).hasSize(3);
 		assertThat(result).containsExactly(entry("a", "b"), entry("c", "d"), entry("e", "f"));
 	}
@@ -592,6 +599,44 @@ class MapBinderTests {
 		assertThat(result.getValues()).containsExactly(entry("a", "b"));
 	}
 
+	@Test
+	void bindToMapWithWildcardShouldConvertToTheRightType() {
+		// gh-18767
+		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
+		source.put("foo.addresses.localhost[0]", "127.0.0.1");
+		source.put("foo.addresses.localhost[1]", "127.0.0.2");
+		this.sources.add(source);
+		MapWithWildcardProperties result = this.binder.bind("foo", Bindable.of(MapWithWildcardProperties.class)).get();
+		assertThat(result.getAddresses().get("localhost").stream().map(InetAddress::getHostAddress))
+			.containsExactly("127.0.0.1", "127.0.0.2");
+	}
+
+	@Test
+	void bindToMapWithPlaceholdersShouldResolve() {
+		DefaultConversionService conversionService = new DefaultConversionService();
+		conversionService.addConverter(new MapConverter());
+		StandardEnvironment environment = new StandardEnvironment();
+		Binder binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment),
+				conversionService, null, null);
+		TestPropertySourceUtils.addInlinedPropertiesToEnvironment(environment, "bar=bc");
+		this.sources.add(new MockConfigurationPropertySource("foo", "a${bar},${bar}d"));
+		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
+		assertThat(map).containsKey("abc");
+		assertThat(map).containsKey("bcd");
+	}
+
+	@Test
+	void bindToCustomMapWithoutCtorAndConverterShouldResolve() {
+		DefaultConversionService conversionService = new DefaultConversionService();
+		conversionService.addConverter(new CustomMapConverter());
+		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
+		source.put("foo.custom-map", "value");
+		this.sources.add(source);
+		Binder binder = new Binder(this.sources, null, conversionService, null);
+		CustomMapWithoutDefaultCtor result = binder.bind("foo", Bindable.of(CustomMapWithoutDefaultCtor.class)).get();
+		assertThat(result.getCustomMap().getSource()).isEqualTo("value");
+	}
+
 	private <K, V> Bindable<Map<K, V>> getMapBindable(Class<K> keyGeneric, ResolvableType valueType) {
 		ResolvableType keyType = ResolvableType.forClass(keyGeneric);
 		return Bindable.of(ResolvableType.forClassWithGenerics(Map.class, keyType, valueType));
@@ -599,6 +644,14 @@ class MapBinderTests {
 
 	private <T> Bindable<List<T>> getListBindable(ResolvableType type) {
 		return Bindable.of(ResolvableType.forClassWithGenerics(List.class, type));
+	}
+
+	private BindHandler mockBindHandler() {
+		BindHandler handler = mock(BindHandler.class);
+		given(handler.onStart(any(), any(), any())).willAnswer(InvocationArgument.index(1));
+		given(handler.onCreate(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
+		given(handler.onSuccess(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
+		return handler;
 	}
 
 	static class Foo {
@@ -624,7 +677,7 @@ class MapBinderTests {
 
 	static class NestableFoo {
 
-		private Map<String, NestableFoo> foos = new LinkedHashMap<>();
+		private final Map<String, NestableFoo> foos = new LinkedHashMap<>();
 
 		private String value;
 
@@ -676,7 +729,7 @@ class MapBinderTests {
 
 	static class ExampleCustomWithDefaultConstructorBean {
 
-		private MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
+		private final MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
 
 		MyCustomWithDefaultConstructorMap getItems() {
 			return this.items;
@@ -703,6 +756,81 @@ class MapBinderTests {
 
 		Map<String, String> getValues() {
 			return Collections.unmodifiableMap(this.values);
+		}
+
+	}
+
+	static class MapWithWildcardProperties {
+
+		private Map<String, ? extends List<? extends InetAddress>> addresses;
+
+		Map<String, ? extends List<? extends InetAddress>> getAddresses() {
+			return this.addresses;
+		}
+
+		void setAddresses(Map<String, ? extends List<? extends InetAddress>> addresses) {
+			this.addresses = addresses;
+		}
+
+	}
+
+	static class CustomMapWithoutDefaultCtor {
+
+		private final CustomMap customMap;
+
+		CustomMapWithoutDefaultCtor(CustomMap customMap) {
+			this.customMap = customMap;
+		}
+
+		CustomMap getCustomMap() {
+			return this.customMap;
+		}
+
+		static final class CustomMap extends AbstractMap<String, Object> {
+
+			private final String source;
+
+			CustomMap(String source) {
+				this.source = source;
+			}
+
+			@Override
+			public Set<Entry<String, Object>> entrySet() {
+				return Collections.emptySet();
+			}
+
+			String getSource() {
+				return this.source;
+			}
+
+		}
+
+	}
+
+	private static final class CustomMapConverter implements Converter<String, CustomMap> {
+
+		@Override
+		public CustomMap convert(String source) {
+			return new CustomMap(source);
+		}
+
+	}
+
+	private static final class InvocationArgument<T> implements Answer<T> {
+
+		private final int index;
+
+		private InvocationArgument(int index) {
+			this.index = index;
+		}
+
+		@Override
+		public T answer(InvocationOnMock invocation) throws Throwable {
+			return invocation.getArgument(this.index);
+		}
+
+		private static <T> InvocationArgument<T> index(int index) {
+			return new InvocationArgument<>(index);
 		}
 
 	}
